--- a/css/layouts/_header.sass
+++ b/css/layouts/_header.sass
@@ -77,7 +77,8 @@ header
     flex-direction:                 column
     align-items:                    flex-end
     cursor:                         pointer
-    z-index:                        20
+    z-index:                        3
+    padding:                        0.5rem
     .bar1, .bar2
         width:                      25px
         height:                     2px
@@ -92,9 +93,19 @@ header
     transform:                      rotate(-45deg) translate(-2px, 5px)
 .change .bar2
     opacity:                        0
+    display:                        none
 .change .bar3
     transform:                      rotate(45deg) translate(-6px, -9px)
     width:                          25px
+
+
+.nav-menu.change
+    transform:                      scale(1.3)
+    background-color:               $primarycolor
+    transform:                      translateX(20px)
+    transform:                      translateY(20px)
+    padding:                        1rem 0.8rem
+
 
 .drop
     display:                            none 
