--- a/css/modules/_colors.sass
+++ b/css/modules/_colors.sass
@@ -83,7 +83,10 @@
     border-top: 0.5px solid rgba(255,255,255,0.6)
 
 .border-bottom-light
-    border-bottom: 0.5px solid rgba(255,255,255,0.4)
+    border-bottom:                  0.5px solid rgba(255,255,255,0.4)
+
+.thin-primary-border
+    border:                         0.5px solid $primarycolor
 
 
 .borderless
