--- a/css/style.css
+++ b/css/style.css
@@ -797,7 +797,8 @@ header nav li a:hover {
       -ms-flex-align: end;
           align-items: flex-end;
   cursor: pointer;
-  z-index: 20;
+  z-index: 3;
+  padding: 0.5rem;
 }
 
 .nav-menu .bar1, .nav-menu .bar2 {
@@ -823,12 +824,24 @@ header nav li a:hover {
 
 .change .bar2 {
   opacity: 0;
+  display: none;
 }
 
 .change .bar3 {
   -webkit-transform: rotate(45deg) translate(-6px, -9px);
           transform: rotate(45deg) translate(-6px, -9px);
   width: 25px;
+}
+
+.nav-menu.change {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  background-color: #045894;
+  -webkit-transform: translateX(20px);
+          transform: translateX(20px);
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  padding: 1rem 0.8rem;
 }
 
 .drop {
@@ -1064,6 +1077,10 @@ nav a.is-active {
 
 .border-bottom-light {
   border-bottom: 0.5px solid rgba(255, 255, 255, 0.4);
+}
+
+.thin-primary-border {
+  border: 0.5px solid #045894;
 }
 
 .borderless {
