--- a/css/layouts/_header.sass
+++ b/css/layouts/_header.sass
@@ -90,21 +90,21 @@ header
         margin:                     3px 0
         transition:                 0.4s
 .change .bar1
-    transform:                      rotate(-45deg) translate(-2px, 5px)
+    background-color:               rgba(255,255,255,0.7)
+    transform:                      rotate(-45deg) translate(-4px, 3px)
 .change .bar2
     opacity:                        0
     display:                        none
 .change .bar3
-    transform:                      rotate(45deg) translate(-6px, -9px)
+    background-color:               rgba(255,255,255,0.7)
+    transform:                      rotate(45deg) translate(-3px, -2px)
     width:                          25px
 
 
 .nav-menu.change
-    transform:                      scale(1.3)
     background-color:               $primarycolor
-    transform:                      translateX(20px)
-    transform:                      translateY(20px)
-    padding:                        1rem 0.8rem
+    padding:                        0.7rem 0.45rem 0.84rem 0.55rem
+    box-shadow:                     0 1px 12px 0 rgba(0,0,0,0.1)
 
 
 .drop
