--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ button {
 }
 
 .min-height-60-vh {
-  height: 65vh;
+  height: 60vh;
 }
 
 @media only screen and (min-width: 768px) {
@@ -818,8 +818,9 @@ header nav li a:hover {
 }
 
 .change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-2px, 5px);
-          transform: rotate(-45deg) translate(-2px, 5px);
+  background-color: rgba(255, 255, 255, 0.7);
+  -webkit-transform: rotate(-45deg) translate(-4px, 3px);
+          transform: rotate(-45deg) translate(-4px, 3px);
 }
 
 .change .bar2 {
@@ -828,20 +829,17 @@ header nav li a:hover {
 }
 
 .change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-6px, -9px);
-          transform: rotate(45deg) translate(-6px, -9px);
+  background-color: rgba(255, 255, 255, 0.7);
+  -webkit-transform: rotate(45deg) translate(-3px, -2px);
+          transform: rotate(45deg) translate(-3px, -2px);
   width: 25px;
 }
 
 .nav-menu.change {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
   background-color: #045894;
-  -webkit-transform: translateX(20px);
-          transform: translateX(20px);
-  -webkit-transform: translateY(20px);
-          transform: translateY(20px);
-  padding: 1rem 0.8rem;
+  padding: 0.7rem 0.45rem 0.84rem 0.55rem;
+  -webkit-box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.1);
 }
 
 .drop {
