--- a/css/layouts/_header.sass
+++ b/css/layouts/_header.sass
@@ -39,36 +39,42 @@ header
 
 .mobile-nav
     height:                             0
-    background:                         white
     transition:                         height 0.00000000001s
-    z-index:                            21
+    z-index:                            4
+    transform:                      translateY(-1200px)
     ul
         padding:                        15px
         list-style:                     none
         display:                        flex
         flex-direction:                 column
-        height:                         100%
         justify-content:                space-between
         margin:                         0
-        align-items:                    flex-end
+        align-items:                    flex-start
         opacity:                        0
         transition:                     opacity 0.5s
+        
         li
-            transform:                  translateY(-230px)
+            transform:                  translateY(-530px)
             opacity:                    0
             transition:                 opacity 0.05s
+            width:                      100%
+            text-align:                 left
+            margin-bottom:              10px
 
 .open-nav.mobile-nav
-    margin-top:                         110px
-    height:                             290px
+    margin-top:                         68px
+    height:                             85vh
+    transform:                          translateY(0px)
     ul
         opacity:                        1
         li
             transform:                  translateY(0)
             opacity:                    1
+            b
 
 
 .nav-menu
+    z-index:                        5
     .bar1, .bar2, .bar3
         background-color:           rgba(0,0,0,0.7)
 
@@ -91,13 +97,13 @@ header
         transition:                 0.4s
 .change .bar1
     background-color:               rgba(255,255,255,0.7)
-    transform:                      rotate(-45deg) translate(-4px, 3px)
+    transform:                      rotate(-225deg) translate(4px, -3px)
 .change .bar2
     opacity:                        0
     display:                        none
 .change .bar3
     background-color:               rgba(255,255,255,0.7)
-    transform:                      rotate(45deg) translate(-3px, -2px)
+    transform:                      rotate(225deg) translate(3px, 2px)
     width:                          25px
 
 
@@ -105,6 +111,44 @@ header
     background-color:               $primarycolor
     padding:                        0.7rem 0.45rem 0.84rem 0.55rem
     box-shadow:                     0 1px 12px 0 rgba(0,0,0,0.1)
+
+
+.bars
+    position:                       absolute
+    top:                            100%
+    display:                        flex
+    z-index:                        3
+    .d-bar-1
+        height:                     0px
+        width:                      2px
+        background-color:           black
+        transition:                 0.1s
+
+    .d-bar-2
+        height:                     0px
+        width:                      2px
+        background-color:           black
+        margin:                     0 10px
+        transition:                 0.1s
+
+    .d-bar-3
+        height:                     0px
+        width:                      2px
+        background-color:           black
+        transition:                 0.1s
+
+
+.change
+    .bars
+        .d-bar-1
+            height:                     100px
+            width:                      2px
+        .d-bar-2
+            height:                     100px
+            width:                      2px
+        .d-bar-3
+            height:                     100px
+            width:                      2px
 
 
 .drop
