--- a/css/style.css
+++ b/css/style.css
@@ -729,10 +729,11 @@ header nav li a:hover {
 
 .mobile-nav {
   height: 0;
-  background: white;
   -webkit-transition: height 0.00000000001s;
   transition: height 0.00000000001s;
-  z-index: 21;
+  z-index: 4;
+  -webkit-transform: translateY(-1200px);
+          transform: translateY(-1200px);
 }
 
 .mobile-nav ul {
@@ -745,30 +746,34 @@ header nav li a:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin: 0;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   opacity: 0;
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
 }
 
 .mobile-nav ul li {
-  -webkit-transform: translateY(-230px);
-          transform: translateY(-230px);
+  -webkit-transform: translateY(-530px);
+          transform: translateY(-530px);
   opacity: 0;
   -webkit-transition: opacity 0.05s;
   transition: opacity 0.05s;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 .open-nav.mobile-nav {
-  margin-top: 110px;
-  height: 290px;
+  margin-top: 68px;
+  height: 85vh;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
 }
 
 .open-nav.mobile-nav ul {
@@ -779,6 +784,10 @@ header nav li a:hover {
   -webkit-transform: translateY(0);
           transform: translateY(0);
   opacity: 1;
+}
+
+.nav-menu {
+  z-index: 5;
 }
 
 .nav-menu .bar1, .nav-menu .bar2, .nav-menu .bar3 {
@@ -819,8 +828,8 @@ header nav li a:hover {
 
 .change .bar1 {
   background-color: rgba(255, 255, 255, 0.7);
-  -webkit-transform: rotate(-45deg) translate(-4px, 3px);
-          transform: rotate(-45deg) translate(-4px, 3px);
+  -webkit-transform: rotate(-225deg) translate(4px, -3px);
+          transform: rotate(-225deg) translate(4px, -3px);
 }
 
 .change .bar2 {
@@ -830,8 +839,8 @@ header nav li a:hover {
 
 .change .bar3 {
   background-color: rgba(255, 255, 255, 0.7);
-  -webkit-transform: rotate(45deg) translate(-3px, -2px);
-          transform: rotate(45deg) translate(-3px, -2px);
+  -webkit-transform: rotate(225deg) translate(3px, 2px);
+          transform: rotate(225deg) translate(3px, 2px);
   width: 25px;
 }
 
@@ -840,6 +849,55 @@ header nav li a:hover {
   padding: 0.7rem 0.45rem 0.84rem 0.55rem;
   -webkit-box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.1);
+}
+
+.bars {
+  position: absolute;
+  top: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 3;
+}
+
+.bars .d-bar-1 {
+  height: 0px;
+  width: 2px;
+  background-color: black;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.bars .d-bar-2 {
+  height: 0px;
+  width: 2px;
+  background-color: black;
+  margin: 0 10px;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.bars .d-bar-3 {
+  height: 0px;
+  width: 2px;
+  background-color: black;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.change .bars .d-bar-1 {
+  height: 100px;
+  width: 2px;
+}
+
+.change .bars .d-bar-2 {
+  height: 100px;
+  width: 2px;
+}
+
+.change .bars .d-bar-3 {
+  height: 100px;
+  width: 2px;
 }
 
 .drop {
