--- a/css/layouts/_header.sass
+++ b/css/layouts/_header.sass
@@ -2,7 +2,7 @@
     // Header
 
     // @package astute
-    // @author  Tonye Dickson <i@kb.life>
+    // @author  Tonye Dickson <>
 
 
 header
@@ -70,7 +70,6 @@ header
         li
             transform:                  translateY(0)
             opacity:                    1
-            b
 
 
 .nav-menu
@@ -116,58 +115,39 @@ header
 .bars
     position:                       absolute
     top:                            100%
+    left:                           0
     display:                        flex
-    z-index:                        3
+    z-index:                        80000
+    align-items:                    center
+    width:                          100%
     .d-bar-1
         height:                     0px
         width:                      2px
         background-color:           black
+        margin:                     0 9px
+        position: relative
+        z-index:                    8
 
     .d-bar-2
         height:                     0px
         width:                      2px
         background-color:           black
-        margin:                     0 10px
-
-    .d-bar-3
-        height:                     0px
-        width:                      2px
-        background-color:           black
+        margin-left:                9px
+        position: relative
+        z-index:                    8
 
 
 .change
     .bars
         .d-bar-1
-            height:                     100px
+            height:                     200px
             width:                      2px
         .d-bar-2
-            height:                     100px
-            width:                      2px
-        .d-bar-3
-            height:                     100px
+            height:                     200px
             width:                      2px
 
 
-.drop
-    display:                            none 
 
-.dropdown 
-    svg:hover
-        cursor:                         pointer 
-
-.dropdown.open
-    z-index:                            2
-    .drop
-        display:                        block
-        width:                          150px
-        top:                            130%
-        right:                          0%
-        li:hover
-            background-color:           #F7F7F7
-        
-
-
-
-@media screen and (max-width: 766px)
+@media screen and (max-width: 767px)
     nav
         display: none
