--- a/css/style.css
+++ b/css/style.css
@@ -709,14 +709,22 @@ header nav li a {
   border: 0.5px dotted transparent;
 }
 
+header nav li a.active {
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+
 header nav li a:hover {
   -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
 }
 
 .logo-area {
-  font-family: 'Dancing Script', cursive;
   font-size: 1.5rem;
+}
+
+.logo-area .text-dance {
+  font-family: 'Dancing Script', cursive;
 }
 
 @media only screen and (min-width: 768px) {
@@ -774,6 +782,11 @@ header nav li a:hover {
   height: 85vh;
   -webkit-transform: translateY(0px);
           transform: translateY(0px);
+}
+
+.open-nav.mobile-nav div {
+  -webkit-box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
 }
 
 .open-nav.mobile-nav ul {
@@ -847,8 +860,8 @@ header nav li a:hover {
 .nav-menu.change {
   background-color: #045894;
   padding: 0.7rem 0.45rem 0.84rem 0.55rem;
-  -webkit-box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.1);
-          box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 7px 12px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 7px 12px rgba(0, 0, 0, 0.3);
 }
 
 .bars {
@@ -858,7 +871,7 @@ header nav li a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: 80000;
+  z-index: 5;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
