modified the about page

--- a/css/modules/_colors.sass
+++ b/css/modules/_colors.sass
@@ -13,6 +13,8 @@
     color:              $readablegray
 .co-richblack
     color:              $richblack
+.co-comp
+    color:              $compcolor
 .co-white
     color:              #ffffff
 .co-whitesmoke
