--- a/css/_trumps.sass
+++ b/css/_trumps.sass
@@ -207,6 +207,12 @@
 .px-3
     padding-right:      3rem
     padding-left:       3rem
+.px-5
+    padding-right:      5rem
+    padding-left:       5rem
+.px-6
+    padding-right:      6rem
+    padding-left:       6rem
 
 .pt-0
     padding-top:        0
