modified the about page

--- a/css/_trumps.sass
+++ b/css/_trumps.sass
@@ -56,6 +56,10 @@
     position:           absolute
     top:                0
     right:              0
+
+.fixed-on-mobile
+    @media screen and (max-width: 767px)
+        position:       fixed
     
 
 // Display
