--- a/css/layouts/_sections.sass
+++ b/css/layouts/_sections.sass
@@ -8,7 +8,8 @@
 main
     margin-right:           94px
     @media screen and (max-width: 767px)
-        margin:             0px
+        margin-top:             89px
+        margin-right:           0
 
 
 .page-content
