--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -56,6 +56,10 @@
     left:               0px
     top:                42px
 
+.bigtext1
+    transform:          translate(15px) rotate(-10deg)
+.bigtext2
+    transform:          rotate(-10deg)
     
 hr
     border-color:       rgba(0,0,0,0.1)
