--- a/css/modules/_images.sass
+++ b/css/modules/_images.sass
@@ -43,6 +43,9 @@
 .overflow-hidden
     overflow:               hidden
 
+.about-height
+    height:                 40vh
+
 .fit-cover
     object-fit:             cover
     height:                 100%
