--- a/css/modules/_colors.sass
+++ b/css/modules/_colors.sass
@@ -57,8 +57,8 @@
     background-color:   $richblack
 .bg-bdark
     background-color:   rgba(21,21,21,0.8)
-.bg-google
-    background-color:   #D62D20
+.bg-bg
+    background-color:   #f8f8f8
 .bg-branddark
     background-color:   $branddark
     &.alter-text
