--- a/css/layouts/_measures.sass
+++ b/css/layouts/_measures.sass
@@ -57,7 +57,8 @@
 
 .max-height-100-vh
     max-height:         100vh
-
+.min-h-180
+    min-height:         190px
 
 .max-height-70-vh
     min-height:         70vh
