--- a/css/_base.sass
+++ b/css/_base.sass
@@ -20,7 +20,7 @@ body
     font-family:            $bodyfont
     font-size:              $basefont
     line-height:            $defaultlh
-    color:                  $readablegray
+    color:                  $richblack
     letter-spacing:         0.155px
     display:                flex
     flex-direction:         column
