--- a/css/_trumps.sass
+++ b/css/_trumps.sass
@@ -305,6 +305,12 @@
 .opacity-7
     opacity:            0.7
 
+// Overflows
+.hide-flow-x
+    overflow-x:         hidden
+.hide-flow-y
+    overflow-y:         hidden
+
 
 // Screen Reader Text
     // The .sr class ensure element is available in the DOM but only to screen readers. The whitespace: nowrap rule ensures accessible texts aren't smushed off screen.
