modified the writing page

--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -6,6 +6,8 @@
 
 .borderline-top
     border-top:         $borderline
+.borderline-bottom
+    border-bottom:         $borderline
 .list-border
     border-bottom:      $borderline
     &:last-of-type
