--- a/css/_trumps.sass
+++ b/css/_trumps.sass
@@ -105,7 +105,9 @@
 
 .m-0
     margin:             0
-
+.my-h
+    margin-top:         0.5rem
+    margin-bottom:      0.5rem
 .my-1
     margin-top:         1rem
     margin-bottom:      1rem
@@ -131,6 +133,12 @@
 .mt-3
     margin-top:         3rem
 
+.writing-m-top
+    margin-top:         6rem
+    @media screen and (max-width: 767px)
+        margin-top:     0rem
+
+
 .mx-auto
     margin-right:       auto
     margin-left:        auto
@@ -154,6 +162,7 @@
     margin-bottom:      2rem
 .mb-3
     margin-bottom:      3rem
+
 
 // Paddings
 .p-0
