--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -26,6 +26,10 @@
     border-bottom-right-radius: 4px
     border-bottom-left-radius: 4px
 
+.blog-list
+    li:hover
+        background-color: #fff
+
 .cardshadow
     box-shadow:         0px 1px 3px rgba(122, 131, 142, 0.15)
 .bottomshadow
