--- a/css/style.css
+++ b/css/style.css
@@ -1178,6 +1178,10 @@ nav a.is-active {
   border-bottom-left-radius: 4px;
 }
 
+.blog-list li:hover {
+  background-color: #fff;
+}
+
 .cardshadow {
   -webkit-box-shadow: 0px 1px 3px rgba(122, 131, 142, 0.15);
           box-shadow: 0px 1px 3px rgba(122, 131, 142, 0.15);
