--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -27,8 +27,10 @@
     border-bottom-left-radius: 4px
 
 .blog-list
-    li:hover
-        background-color: #fff
+    a
+        border: 0.5px dotted rgba(0,0,0,0)
+    a:hover
+        border: 0.5px dotted rgba(0,0,0,0.5)
 
 .cardshadow
     box-shadow:         0px 1px 3px rgba(122, 131, 142, 0.15)
