--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Dancing+Script");
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans:300");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:300");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:600,700,800");
 html {
   font-size: 15px;
@@ -16,7 +16,7 @@ button, a, button:focus, a:focus, input, input:focus {
 
 body {
   margin: 0;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-size: 15px;
   line-height: 1.6225;
   color: #080705;
@@ -89,7 +89,7 @@ button {
   background: none;
   padding: 0;
   cursor: pointer;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .wrapper {
@@ -1369,7 +1369,7 @@ form, .form {
 
 form label, .form label {
   display: block;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   background-color: rgba(255, 255, 255, 0.1);
   border: 0.5px solid rgba(255, 255, 255, 0.3);
   padding: 3px 3px 3px 0px;
@@ -1546,7 +1546,7 @@ tbody tr:hover {
 }
 
 .ff-serif {
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .ff-sans-serif {
