--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -7,7 +7,7 @@
 // Typography
 
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script')
-@import url('https://fonts.googleapis.com/css?family=Ubuntu:300')
+@import url('https://fonts.googleapis.com/css?family=Ubuntu')
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600,700,800')
 
 
