--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -7,11 +7,11 @@
 // Typography
 
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script')
-@import url('https://fonts.googleapis.com/css?family=Ubuntu')
+@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans')
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600,700,800')
 
 
-$basefont:          15px
+$basefont:          16px
 $picofont:          0.875rem
 $nanofont:          0.925rem
 $microfont:         1.075rem
@@ -20,7 +20,7 @@ $mediumfont:        1.3125rem
 $largefont:         1.475rem
 $smallnanofont:     0.725rem
 
-$bodyfont:          'Ubuntu', sans-serif
+$bodyfont:          'Quattrocento Sans', sans-serif
 $headingfont:       'Montserrat', sans-serif
 
 $defaultlh:         1.6225
