--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Dancing+Script");
-@import url("https://fonts.googleapis.com/css?family=Ubuntu");
+@import url("https://fonts.googleapis.com/css?family=Quattrocento+Sans");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:600,700,800");
 html {
-  font-size: 15px;
+  font-size: 16px;
 }
 
 *, *::before, *::after {
@@ -16,8 +16,8 @@ button, a, button:focus, a:focus, input, input:focus {
 
 body {
   margin: 0;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 15px;
+  font-family: "Quattrocento Sans", sans-serif;
+  font-size: 16px;
   line-height: 1.6225;
   color: #080705;
   letter-spacing: 0.155px;
@@ -89,7 +89,7 @@ button {
   background: none;
   padding: 0;
   cursor: pointer;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Quattrocento Sans", sans-serif;
 }
 
 .wrapper {
@@ -1369,7 +1369,7 @@ form, .form {
 
 form label, .form label {
   display: block;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Quattrocento Sans", sans-serif;
   background-color: rgba(255, 255, 255, 0.1);
   border: 0.5px solid rgba(255, 255, 255, 0.3);
   padding: 3px 3px 3px 0px;
@@ -1546,7 +1546,7 @@ tbody tr:hover {
 }
 
 .ff-serif {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Quattrocento Sans", sans-serif;
 }
 
 .ff-sans-serif {
@@ -2208,7 +2208,7 @@ h3, .h3 {
 }
 
 .mb-p {
-  margin-bottom: 15px !important;
+  margin-bottom: 16px !important;
 }
 
 .mb-hh {
