doctype affected header appearance

--- a/css/_trumps.sass
+++ b/css/_trumps.sass
@@ -266,6 +266,11 @@
     display:            none
     @media #{ $mediumup }
         display:        block
+
+.flex-show-mediumup
+    display:            none
+    @media #{ $mediumup }
+        display:        flex
 .show-largeup
     display:            none
     @media #{ $largeup }
