--- a/css/layouts/_grid.sass
+++ b/css/layouts/_grid.sass
@@ -80,7 +80,7 @@
     display:                        grid
     grid-gap:                       $space-sm
     grid-template-columns:          1fr
-    @media #{ $mediumup }
+    @media #{ $largeup }
         grid-template-columns:      1fr 1fr
 
 .grid-2-s
