--- a/css/layouts/_header.sass
+++ b/css/layouts/_header.sass
@@ -36,6 +36,10 @@ header
     @media #{$mediumup}
         position:                   fixed
         top:                        20px
+        left:                       20px
+    @media #{$largeup}
+        position:                   fixed
+        top:                        20px
         left:                       50px
 
 
