--- a/css/layouts/_measures.sass
+++ b/css/layouts/_measures.sass
@@ -58,7 +58,10 @@
 .max-height-100-vh
     max-height:         100vh
 .min-h-80
-    min-height:         80px
+    min-height:         90px
+    @media #{$mediumup}
+        min-height:         20vh
+        margin-top:         100px
 
 .max-height-70-vh
     min-height:         70vh
