--- a/css/layouts/_measures.sass
+++ b/css/layouts/_measures.sass
@@ -24,6 +24,24 @@
 
 .w-100
     width:              100%
+.w-link
+    height:             50px
+    object-fit:         contain
+    @media #{$mediumup}
+        height:            50px
+        object-fit:         contain
+
+    @media #{$largeup}
+        height:             50px
+        object-fit:         contain
+.work-item
+    background-color:   white
+    border:             1px solid transparent
+    transition:         all 0.3s
+    border-radius:      4px
+    &:hover
+        background-color:   white
+        border:             1px solid $primarycolor
 
 
 
