--- a/css/layouts/_grid.sass
+++ b/css/layouts/_grid.sass
@@ -83,6 +83,14 @@
     @media #{ $largeup }
         grid-template-columns:      1fr 1fr
 
+
+.grid-medium-2
+    display:                        grid
+    grid-gap:                       $space-sm
+    grid-template-columns:          1fr
+    @media #{ $mediumup }
+        grid-template-columns:      1fr 1fr
+
 .grid-2-s
     display:                        grid
     grid-gap:                       0.8rem
