--- a/css/layouts/_measures.sass
+++ b/css/layouts/_measures.sass
@@ -42,7 +42,8 @@
     &:hover
         background-color:   white
         border:             1px solid $primarycolor
-
+.w-auto
+    width:              auto
 
 
 // Heights
