--- a/css/_base.sass
+++ b/css/_base.sass
@@ -31,6 +31,7 @@ body
 p
     margin:                 0
     margin-bottom:          24px
+    font-weight:            semi-bold
     &:last-child
         margin-bottom:      0
 
