--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -7,7 +7,7 @@
 // Typography
 
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script')
-@import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans')
+@import url('https://fonts.googleapis.com/css?family=Open+Sans')
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600,700,800')
 
 
@@ -20,7 +20,7 @@ $mediumfont:        1.3125rem
 $largefont:         1.475rem
 $smallnanofont:     0.725rem
 
-$bodyfont:          'Quattrocento Sans', sans-serif
+$bodyfont:          'Open Sans', sans-serif
 $headingfont:       'Montserrat', sans-serif
 
 $defaultlh:         1.6225
