--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Dancing+Script");
-@import url("https://fonts.googleapis.com/css?family=Quattrocento+Sans");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:600,700,800");
 html {
   font-size: 16px;
@@ -16,7 +16,7 @@ button, a, button:focus, a:focus, input, input:focus {
 
 body {
   margin: 0;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
   line-height: 1.6225;
   color: #080705;
@@ -40,6 +40,7 @@ body main {
 p {
   margin: 0;
   margin-bottom: 24px;
+  font-weight: semi-bold;
 }
 
 p:last-child {
@@ -89,7 +90,7 @@ button {
   background: none;
   padding: 0;
   cursor: pointer;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .wrapper {
@@ -1438,7 +1439,7 @@ form, .form {
 
 form label, .form label {
   display: block;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: rgba(255, 255, 255, 0.1);
   border: 0.5px solid rgba(255, 255, 255, 0.3);
   padding: 3px 3px 3px 0px;
@@ -1615,7 +1616,7 @@ tbody tr:hover {
 }
 
 .ff-serif {
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .ff-sans-serif {
