changed a lot of stuff mostly for the navigation

--- a/css/layouts/_measures.sass
+++ b/css/layouts/_measures.sass
@@ -22,6 +22,12 @@
 .maxwidth-xxs
     max-width:          $maxwidth-xxs
 
+.main-wrap
+    max-width:          1170px
+    @media screen and (min-width: 1440px)
+        max-width:      1300px
+
+
 .w-100
     width:              100%
 .w-link
