--- a/css/layouts/_header.sass
+++ b/css/layouts/_header.sass
@@ -8,11 +8,6 @@
 header
     z-index:                    2
     font-family:                'Montserrat', sans-serif
-    @media #{$mediumup}
-        height:                     100vh
-        width:                      94px
-        position:                   fixed
-        right:                      0
 
     .logo
         h3
@@ -20,143 +15,13 @@ header
 
     nav
         li a
-            transform:          rotate(90deg)
-            border-radius:      50%
             transition:         all 0.3s
-            border:             0.5px dotted transparent
-        li a.active
-            transform:          rotate(0deg)
-        li a:hover
-            transform:          rotate(0deg)
+            margin-left:        3rem
+            @media screen and (max-width: 767px)
+                margin-left:    1rem
+
 
 .logo-area
     font-size:                  1.5rem
     .text-dance
         font-family:                'Dancing Script', cursive
-    @media #{$mediumup}
-        position:                   fixed
-        top:                        20px
-        left:                       20px
-    @media #{$largeup}
-        position:                   fixed
-        top:                        20px
-        left:                       50px
-
-
-.mobile-nav
-    height:                             0
-    transition:                         height 0.00000000001s
-    z-index:                            4
-    transform:                          translateY(-1200px)
-
-    ul
-        padding:                        15px
-        list-style:                     none
-        display:                        flex
-        flex-direction:                 column
-        justify-content:                space-between
-        margin:                         0
-        align-items:                    flex-start
-        opacity:                        0
-        transition:                     opacity 0.5s
-        
-        li
-            transform:                  translateY(-530px)
-            opacity:                    0
-            transition:                 opacity 0.05s
-            width:                      100%
-            text-align:                 left
-            margin-bottom:              10px
-
-.open-nav.mobile-nav
-    margin-top:                         68px
-    height:                             85vh
-    transform:                          translateY(0px)
-    div
-        box-shadow:                     0 3px 12px rgba(0,0,0,0.2)
-    ul
-        opacity:                        1
-        li
-            transform:                  translateY(0)
-            opacity:                    1
-
-
-.nav-menu
-    z-index:                        5
-    .bar1, .bar2, .bar3
-        background-color:           rgba(0,0,0,0.7)
-
-.nav-menu
-    display:                        flex
-    flex-direction:                 column
-    align-items:                    flex-end
-    cursor:                         pointer
-    z-index:                        3
-    padding:                        0.5rem
-    .bar1, .bar2
-        width:                      25px
-        height:                     2px
-        margin:                     3px 0
-        transition:                 0.4s
-    .bar3
-        width:                      13px
-        height:                     2px
-        margin:                     3px 0
-        transition:                 0.4s
-.change .bar1
-    background-color:               rgba(255,255,255,0.7)
-    transform:                      rotate(-225deg) translate(4px, -3px)
-.change .bar2
-    opacity:                        0
-    display:                        none
-.change .bar3
-    background-color:               rgba(255,255,255,0.7)
-    transform:                      rotate(225deg) translate(3px, 2px)
-    width:                          25px
-
-
-.nav-menu.change
-    background-color:               $primarycolor
-    padding:                        0.7rem 0.45rem 0.84rem 0.55rem
-    box-shadow:                     0 7px 12px rgba(0,0,0,0.3)
-
-
-.bars
-    position:                       absolute
-    top:                            100%
-    left:                           0
-    display:                        flex
-    z-index:                        5
-    align-items:                    center
-    width:                          100%
-    .d-bar-1
-        height:                     0px
-        width:                      2px
-        background-color:           black
-        margin:                     0 9px
-        position: relative
-        z-index:                    8
-
-    .d-bar-2
-        height:                     0px
-        width:                      2px
-        background-color:           black
-        margin-left:                9px
-        position: relative
-        z-index:                    8
-
-
-.change
-    .bars
-        .d-bar-1
-            height:                     200px
-            width:                      2px
-        .d-bar-2
-            height:                     200px
-            width:                      2px
-
-
-
-@media screen and (max-width: 767px)
-    nav
-        display: none
