--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ p:last-child {
 
 a {
   text-decoration: none;
-  color: #fff;
   -webkit-transition: color 0.32s ease;
   transition: color 0.32s ease;
 }
@@ -500,7 +499,7 @@ button {
 }
 
 .maxwidth-sm {
-  max-width: 576px;
+  max-width: 500px;
 }
 
 .maxwidth-xs {
@@ -509,6 +508,16 @@ button {
 
 .maxwidth-xxs {
   max-width: 304px;
+}
+
+.main-wrap {
+  max-width: 1170px;
+}
+
+@media screen and (min-width: 1440px) {
+  .main-wrap {
+    max-width: 1300px;
+  }
 }
 
 .w-100 {
@@ -651,20 +660,10 @@ button {
   }
 }
 
-main {
-  margin-right: 94px;
-}
-
 @media screen and (max-width: 767px) {
   main {
-    margin-top: 89px;
-    margin-right: 0;
+    margin-top: 110px;
   }
-}
-
-.page-content {
-  position: relative;
-  z-index: 10;
 }
 
 .small-section {
@@ -754,36 +753,20 @@ header {
   font-family: 'Montserrat', sans-serif;
 }
 
-@media only screen and (min-width: 768px) {
-  header {
-    height: 100vh;
-    width: 94px;
-    position: fixed;
-    right: 0;
-  }
-}
-
 header .logo h3 {
   font-family: 'Montserrat', sans-serif;
 }
 
 header nav li a {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  border-radius: 50%;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  border: 0.5px dotted transparent;
+  margin-left: 3rem;
 }
 
-header nav li a.active {
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-}
-
-header nav li a:hover {
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
+@media screen and (max-width: 767px) {
+  header nav li a {
+    margin-left: 1rem;
+  }
 }
 
 .logo-area {
@@ -792,199 +775,6 @@ header nav li a:hover {
 
 .logo-area .text-dance {
   font-family: 'Dancing Script', cursive;
-}
-
-@media only screen and (min-width: 768px) {
-  .logo-area {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-  }
-}
-
-@media only screen and (min-width: 992px) {
-  .logo-area {
-    position: fixed;
-    top: 20px;
-    left: 50px;
-  }
-}
-
-.mobile-nav {
-  height: 0;
-  -webkit-transition: height 0.00000000001s;
-  transition: height 0.00000000001s;
-  z-index: 4;
-  -webkit-transform: translateY(-1200px);
-          transform: translateY(-1200px);
-}
-
-.mobile-nav ul {
-  padding: 15px;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin: 0;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  opacity: 0;
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-}
-
-.mobile-nav ul li {
-  -webkit-transform: translateY(-530px);
-          transform: translateY(-530px);
-  opacity: 0;
-  -webkit-transition: opacity 0.05s;
-  transition: opacity 0.05s;
-  width: 100%;
-  text-align: left;
-  margin-bottom: 10px;
-}
-
-.open-nav.mobile-nav {
-  margin-top: 68px;
-  height: 85vh;
-  -webkit-transform: translateY(0px);
-          transform: translateY(0px);
-}
-
-.open-nav.mobile-nav div {
-  -webkit-box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
-}
-
-.open-nav.mobile-nav ul {
-  opacity: 1;
-}
-
-.open-nav.mobile-nav ul li {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  opacity: 1;
-}
-
-.nav-menu {
-  z-index: 5;
-}
-
-.nav-menu .bar1, .nav-menu .bar2, .nav-menu .bar3 {
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.nav-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  cursor: pointer;
-  z-index: 3;
-  padding: 0.5rem;
-}
-
-.nav-menu .bar1, .nav-menu .bar2 {
-  width: 25px;
-  height: 2px;
-  margin: 3px 0;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.nav-menu .bar3 {
-  width: 13px;
-  height: 2px;
-  margin: 3px 0;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.change .bar1 {
-  background-color: rgba(255, 255, 255, 0.7);
-  -webkit-transform: rotate(-225deg) translate(4px, -3px);
-          transform: rotate(-225deg) translate(4px, -3px);
-}
-
-.change .bar2 {
-  opacity: 0;
-  display: none;
-}
-
-.change .bar3 {
-  background-color: rgba(255, 255, 255, 0.7);
-  -webkit-transform: rotate(225deg) translate(3px, 2px);
-          transform: rotate(225deg) translate(3px, 2px);
-  width: 25px;
-}
-
-.nav-menu.change {
-  background-color: #045894;
-  padding: 0.7rem 0.45rem 0.84rem 0.55rem;
-  -webkit-box-shadow: 0 7px 12px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 7px 12px rgba(0, 0, 0, 0.3);
-}
-
-.bars {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  z-index: 5;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-}
-
-.bars .d-bar-1 {
-  height: 0px;
-  width: 2px;
-  background-color: black;
-  margin: 0 9px;
-  position: relative;
-  z-index: 8;
-}
-
-.bars .d-bar-2 {
-  height: 0px;
-  width: 2px;
-  background-color: black;
-  margin-left: 9px;
-  position: relative;
-  z-index: 8;
-}
-
-.change .bars .d-bar-1 {
-  height: 200px;
-  width: 2px;
-}
-
-.change .bars .d-bar-2 {
-  height: 200px;
-  width: 2px;
-}
-
-@media screen and (max-width: 767px) {
-  nav {
-    display: none;
-  }
 }
 
 nav a.is-active {
