modified the work page

--- a/css/layouts/_measures.sass
+++ b/css/layouts/_measures.sass
@@ -33,21 +33,19 @@
 .w-link
     height:             50px
     object-fit:         contain
+    width:              auto
     @media #{$mediumup}
         height:            50px
         object-fit:         contain
-
     @media #{$largeup}
         height:             50px
         object-fit:         contain
+
 .work-item
     background-color:   white
-    border:             1px solid transparent
-    transition:         all 0.3s
     border-radius:      4px
     &:hover
         background-color:   white
-        border:             1px solid $primarycolor
 .w-auto
     width:              auto
 
