--- a/css/modules/_texts.sass
+++ b/css/modules/_texts.sass
@@ -13,6 +13,9 @@
     text-align:         right
     @media screen and (max-width: 700px)
         text-align:     left
+.tx-l
+    text-align:         left
+
 .uline
     text-decoration:    underline
 
