--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@ a {
 }
 
 a:active, a:focus, a:hover {
-  opacity: 0.7;
   text-decoration: none;
 }
 
@@ -528,6 +527,7 @@ button {
   height: 50px;
   -o-object-fit: contain;
      object-fit: contain;
+  width: auto;
 }
 
 @media only screen and (min-width: 768px) {
@@ -548,15 +548,11 @@ button {
 
 .work-item {
   background-color: white;
-  border: 1px solid transparent;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
   border-radius: 4px;
 }
 
 .work-item:hover {
   background-color: white;
-  border: 1px solid #045894;
 }
 
 .w-auto {
@@ -1046,16 +1042,6 @@ nav a.is-active {
   border: 0.5px dotted rgba(0, 0, 0, 0.5);
 }
 
-.cardshadow {
-  -webkit-box-shadow: 0px 1px 3px rgba(122, 131, 142, 0.15);
-          box-shadow: 0px 1px 3px rgba(122, 131, 142, 0.15);
-}
-
-.bottomshadow {
-  -webkit-box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.5);
-}
-
 .left-50-content {
   -webkit-transform: translateX(160px);
           transform: translateX(160px);
@@ -1121,103 +1107,6 @@ nav a.is-active {
 @media only screen and (min-width: 576px) {
   .bigtext2 {
     font-size: 2.96rem;
-  }
-}
-
-hr {
-  border-color: rgba(0, 0, 0, 0.1);
-}
-
-.bar {
-  width: 100%;
-  height: 3px;
-  background-color: #045894;
-}
-
-.bg-home-business {
-  background-color: #080705;
-}
-
-@media only screen and (min-width: 768px) {
-  .bg-home-business {
-    background-image: url(/uploads/pages/merchant.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-}
-
-.stacked-tile {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  z-index: 0;
-}
-
-@media only screen and (min-width: 768px) {
-  .stacked-tile {
-    padding: 0 1.09rem;
-  }
-}
-
-.stacked-tile .img-holder {
-  max-width: 100%;
-  z-index: 1;
-}
-
-.stacked-tile .img-holder img {
-  height: 336px;
-}
-
-@media only screen and (min-width: 576px) {
-  .stacked-tile .img-holder img {
-    height: 392px;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  .stacked-tile .img-holder {
-    width: 100%;
-  }
-}
-
-.stacked-tile .stacked-tile-body {
-  z-index: 0;
-  margin-top: -4rem;
-  padding-top: 6rem !important;
-}
-
-@media only screen and (min-width: 768px) {
-  .stacked-tile .stacked-tile-body {
-    margin-top: 4rem;
-    padding-top: 0;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  .stacked-tile {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .stacked-tile.leftpic .stacked-tile-body {
-    margin-left: -4rem;
-    padding-left: 6rem !important;
-  }
-  .stacked-tile.rightpic .img-holder {
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
-  }
-  .stacked-tile.rightpic .stacked-tile-body {
-    margin-right: -4rem;
-    padding-right: 6rem !important;
   }
 }
 
@@ -1397,6 +1286,10 @@ tbody tr:hover {
   .tx-rl {
     text-align: left;
   }
+}
+
+.tx-l {
+  text-align: left;
 }
 
 .uline {
