added footer and something else

--- a/css/layouts/_header.sass
+++ b/css/layouts/_header.sass
@@ -17,6 +17,7 @@ header
         li a
             transition:         all 0.3s
             margin-left:        3rem
+            font-family:        $bodyfont
             @media screen and (max-width: 767px)
                 margin-left:    1rem
 
