--- a/css/modules/_colors.sass
+++ b/css/modules/_colors.sass
@@ -81,7 +81,7 @@
     background-size:                cover
     background-position:            center center
 
-.border-top-light
+.border-top-light              
     border-top: 0.5px solid rgba(255,255,255,0.6)
 
 .border-bottom-light
@@ -89,6 +89,10 @@
 
 .thin-primary-border
     border:                         0.5px solid $primarycolor
+
+.top-bottom-border
+    border-top:                     0.5px solid $primarycolor
+    border-bottom:                  0.5px solid $primarycolor
 
 
 .borderless
