--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,7 @@ header nav li a {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   margin-left: 3rem;
+  font-family: "Open Sans", sans-serif;
 }
 
 @media screen and (max-width: 767px) {
@@ -985,6 +986,11 @@ nav a.is-active {
 
 .thin-primary-border {
   border: 0.5px solid #045894;
+}
+
+.top-bottom-border {
+  border-top: 0.5px solid #045894;
+  border-bottom: 0.5px solid #045894;
 }
 
 .borderless {
