worked on the blog

--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -45,6 +45,20 @@
     @media screen and (max-width: 767px)
         justify-content:    center
 
+.tag-item
+    display:            inline-block
+    padding:            0.1rem 0.8rem 0.25rem 0.8rem
+    margin-right:       0.4rem
+    border-radius:      50px
+    border:             0.7px solid $primarycolor
+    margin-bottom:      1rem
+    font-size:          0.8rem
+
+.tag-item:hover
+    background-color:   $primarycolor
+    a
+        color:          white
+
 
 .active-dot
     position: relative
