--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -47,12 +47,15 @@
 
 .tag-item
     display:            inline-block
-    padding:            0.1rem 0.8rem 0.25rem 0.8rem
     margin-right:       0.4rem
     border-radius:      50px
     border:             0.7px solid $primarycolor
     margin-bottom:      1rem
     font-size:          0.8rem
+    a
+        display:    block
+        padding:            0.1rem 0.8rem 0.25rem 0.8rem
+
 
 .tag-item:hover
     background-color:   $primarycolor
