modified the writing page

--- a/css/modules/_colors.sass
+++ b/css/modules/_colors.sass
@@ -55,8 +55,8 @@
     background-color:   $gainsboro
 .bg-rich-black
     background-color:   $richblack
-.bg-bdark
-    background-color:   rgba(21,21,21,0.8)
+.bg-black
+    background-color:   rgba(0,0,0,0)
 .bg-bg
     background-color:   #f8f8f8
 .bg-branddark
