--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -63,6 +63,30 @@
         color:          white
 
 
+.writing-nav-icon
+    display:            inline-block
+    border:             1px solid black
+    padding:            0.5rem
+    text-align:         center
+    background-color:   black
+    color:              white
+    width:              40px
+    height:             40px
+    margin:             0.5rem
+.writing-nav-icon.active
+    padding:            0.5rem
+    text-align:         center
+    border:             1px solid $primarycolor
+    background-color:   #f8f8f8
+    color:              black
+
+.writing-nav-icon:hover
+    border:             1px solid $primarycolor
+    background-color:   #f8f8f8
+    color:              black
+    cursor:             pointer
+
+
 .active-dot
     position: relative
 
