--- a/css/style.css
+++ b/css/style.css
@@ -924,8 +924,8 @@ nav a.is-active {
   background-color: #080705;
 }
 
-.bg-bdark {
-  background-color: rgba(21, 21, 21, 0.8);
+.bg-black {
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .bg-bg {
@@ -1080,6 +1080,33 @@ nav a.is-active {
 
 .tag-item:hover a {
   color: white;
+}
+
+.writing-nav-icon {
+  display: inline-block;
+  border: 1px solid black;
+  padding: 0.5rem;
+  text-align: center;
+  background-color: black;
+  color: white;
+  width: 40px;
+  height: 40px;
+  margin: 0.5rem;
+}
+
+.writing-nav-icon.active {
+  padding: 0.5rem;
+  text-align: center;
+  border: 1px solid #045894;
+  background-color: #f8f8f8;
+  color: black;
+}
+
+.writing-nav-icon:hover {
+  border: 1px solid #045894;
+  background-color: #f8f8f8;
+  color: black;
+  cursor: pointer;
 }
 
 .active-dot {
