modified the article page

--- a/css/modules/_texts.sass
+++ b/css/modules/_texts.sass
@@ -67,6 +67,11 @@
     font-size:          $mediumfont
 .largetext
     font-size:          $largefont
+.largertext
+    font-size:          2rem
+    @media #{ $smallup }
+        font-size:          3rem
+
 .lead
     @extend .smalltext
 
