--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -65,17 +65,15 @@
 
 .writing-nav-icon
     display:            inline-block
-    border:             1px solid black
-    padding:            0.5rem
+    border:             1px solid #565656
+    padding:            0.45rem 0.5rem
     text-align:         center
-    background-color:   black
+    background-color:   #565656
     color:              white
     width:              40px
     height:             40px
     margin:             0.5rem
 .writing-nav-icon.active
-    padding:            0.5rem
-    text-align:         center
     border:             1px solid $primarycolor
     background-color:   #f8f8f8
     color:              black
