modified the article page

--- a/css/modules/_decorations.sass
+++ b/css/modules/_decorations.sass
@@ -85,6 +85,20 @@
     cursor:             pointer
 
 
+.article-left-nav, .article-right-nav
+    border:             1px solid #565656
+    padding:            0.45rem 0.5rem
+    text-align:         center
+    background-color:   #565656
+    color:              white
+    margin:             0.5rem
+.article-left-nav:hover, .article-right-nav:hover
+    border:             1px solid $primarycolor
+    background-color:   #f8f8f8
+    color:              black
+    cursor:             pointer    
+
+
 .active-dot
     position: relative
 
