--- a/css/modules/_texts.sass
+++ b/css/modules/_texts.sass
@@ -15,6 +15,8 @@
         text-align:     left
 .tx-l
     text-align:         left
+.tx-r
+    text-align:         right
 
 .uline
     text-decoration:    underline
