--- a/css/layouts/_navs.sass
+++ b/css/layouts/_navs.sass
@@ -5,13 +5,25 @@
     // @author  Tonye Dickson <itztonye@gmail.com>
 
 
+nav a
+    position:           relative
+
 nav a.is-active
-    color:          $primarycolor
+    color:              $primarycolor
+    &::after
+        position:       absolute
+        content:        ""
+        width:          100%
+        height:         2px
+        left:           0
+        top:            35px
+        background-color: $primarycolor
+
         
 
     
 .topmenu
     display:            flex
 .logo
-    width:               120px
+    width:              120px
 
